@@ -12,11 +12,12 @@ Operators
 ---------
 The following operators are available: 
 
-  rm-header header-name			[flags]
-  add-header header <value>		[flags]
-  set-status <status-code>		[flags]
-  set-status-reason <value>		[flags]
-  no-op		    			[flags]
+  rm-header header-name                 [flags]
+  add-header header <value>             [flags]
+  set-status <status-code>              [flags]
+  set-status-reason <value>             [flags]
+  set-config config <value>             [flags]
+  no-op                                 [flags]
 
 The following operator(s) currently only works when instantiating the
 plugin as a remap plugin:
@@ -38,7 +39,7 @@ For example (as a remap rule):
 
 Operator flags
 --------------
-  [L]	Last rule, do not continue
+  [L]   Last rule, do not continue
 
 
 Conditions
@@ -46,22 +47,22 @@ Conditions
 The conditions are used as qualifiers: The operators specified will
 only be evaluated if the condition(s) are met.
 
-  cond %{STATUS} operand			[flags]
-  cond %{RANDOM:nn} operand			[flags]
-  cond %{ACCESS:file}				[flags]
-  cond %{TRUE}					[flags]
-  cond %{FALSE}					[flags]
-  cond %{HEADER:header-name} operand		[flags]
-  cond %{CLIENT-HEADER:header-name} operand	[flags]
-  cond %{METHOD} operand			[flags]
-  cond %{PROTOCOL} operand			[flags]
-  cond %{PORT} operand				[flags]
-  cond %{HOST} operand				[flags]
-  cond %{TOHOST} operand			[false]
-  cond %{FROMHOST} operand			[false]
-  cond %{PATH} operand				[false]
-  cond %{PARAMS} operand			[false]
-  cond %{QUERY} operand				[false]
+  cond %{STATUS} operand                        [flags]
+  cond %{RANDOM:nn} operand                     [flags]
+  cond %{ACCESS:file}                           [flags]
+  cond %{TRUE}                                  [flags]
+  cond %{FALSE}                                 [flags]
+  cond %{HEADER:header-name} operand            [flags]
+  cond %{CLIENT-HEADER:header-name} operand     [flags]
+  cond %{METHOD} operand                        [flags]
+  cond %{PROTOCOL} operand                      [flags]
+  cond %{PORT} operand                          [flags]
+  cond %{HOST} operand                          [flags]
+  cond %{TOHOST} operand                        [false]
+  cond %{FROMHOST} operand                      [false]
+  cond %{PATH} operand                          [false]
+  cond %{PARAMS} operand                        [false]
+  cond %{QUERY} operand                         [false]
 
 
 The difference between HEADER and CLIENT-HEADER is that HEADER adapts to the
@@ -81,9 +82,9 @@ each rule. This implies that a new hook condition starts a new rule as well.
 Condition flags
 ---------------
   [NC]  Not ase sensitive condition (when applicable)
-  [AND]	AND with next condition (default)
-  [OR]	OR with next condition
-  [NOT]	Invert this condition
+  [AND] AND with next condition (default)
+  [OR]  OR with next condition
+  [NOT] Invert this condition
 
 
 Operands to conditions
@@ -112,7 +113,7 @@ Examples
 cond %{HEADER:X-Y-Foobar}
 cond %{METHOD} =GET [OR]
 cond %{METHOD} =POST
-set-header X-Y-Fiefum %{HEADER:X-Y-Foobar}
+add-header X-Y-Fiefum %{HEADER:X-Y-Foobar}
 rm-header X-Y-Foobar
 rm-header Set-Cookie
 
