@@ -48,7 +48,7 @@ RuleSet::add_condition(Parser& p) {
     TSDebug(PLUGIN_NAME, "Adding condition: %%{%s} with arg: %s\n", p.get_op().c_str(), p.get_arg().c_str());
     c->initialize(p);
     if (!c->set_hook(_hook)) {
-      TSError("header_rewrite: can't use this condition in this hook");
+      TSError("%s: can't use this condition in this hook", PLUGIN_NAME);
       return;
     }
     if (NULL == _cond) {
@@ -73,7 +73,7 @@ RuleSet::add_operator(Parser& p) {
     TSDebug(PLUGIN_NAME, "Adding operator: %s(%s)\n", p.get_op().c_str(), p.get_arg().c_str());
     o->initialize(p);
     if (!o->set_hook(_hook)) {
-      TSError("header_rewrite: can't use this operator in this hook");
+      TSError("%s: can't use this operator in this hook", PLUGIN_NAME);
       return;
     }
     if (NULL == _oper) {
